corrected the LH logo with height 100px to help with stretched logo

--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ body {
 
 #logo {
   width: 100px;
+  height: 100px;
   display: inline-block;
   margin-bottom: 30px;
 }
